Fix for issue with short text on page-nav content causing prev/next labels to wrap

--- a/assets/_scss/overrides/_override.page-nav.scss
+++ b/assets/_scss/overrides/_override.page-nav.scss
@@ -1,3 +1,7 @@
+.page-nav__text {
+    display: block;
+}
+
 .page-nav__button--left:before, .page-nav__button--right:before {
     background-color: $color__link--primary;
 }
